# fluQC

./: .gitignore  FluQC.py  README.md  analysis.py  dashboard.py  env.yaml  logging_config.yml  profile.html  profile.json  pyproject.toml  refactoring.py  scalene.cli  test.py
config/: logging_config.yml
fluqc/: cli.py  dash.py  figuredata.py  plotter.py  samplepaths.py  texts.py  wrappers.py
fluqc/dashboard/: layout.py  texts.py
